# event_hex_examples

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE
config/: default.toml  development.toml  production.toml
structure_folder/: main.rs
structure_folder/adapters/: mod.rs
structure_folder/adapters/api/: mod.rs
structure_folder/adapters/api/http/: mod.rs
structure_folder/adapters/api/messaging/: mod.rs
structure_folder/adapters/configurations/: command_bus_config.rs  db.rs  event_bus_config.rs  mod.rs  query_bus_config.rs  service_config.rs  settings.rs
structure_folder/adapters/external_services/: mod.rs
structure_folder/adapters/persistence/: mod.rs
structure_folder/adapters/persistence/mongodb/: mod.rs
structure_folder/application/: mod.rs
structure_folder/application/command/: mod.rs
structure_folder/application/command/domain/: mod.rs
structure_folder/application/dto/: user.rs
structure_folder/application/event/: access_account_handlers.rs  mod.rs
structure_folder/application/ports/: mod.rs
structure_folder/application/query/: mod.rs
structure_folder/application/query/handler/: mod.rs
structure_folder/application/saga/: mod.rs
structure_folder/application/saga/service/: mod.rs
structure_folder/application/service/: identity_service.rs  mod.rs
structure_folder/core/: mod.rs
structure_folder/core/identity_access_management/: mod.rs
structure_folder/core/identity_access_management/identity/: mod.rs
structure_folder/shared_kernel/: errors.rs  mod.rs
structure_folder/shared_kernel/model/: common.rs
(+32 files in other folders)
